dk0200st/kube03.yaml
# A simple yaml file to create a route
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: simpleapp
  namespace: dk0200
  labels:
    app: simpleapp
spec:
  host: simpleapp-dk0200st.apps.demo.ibmdte.net
  path: /Simple
  to:
    kind: Service
    name: simpleapp
    weight: 100
  port:
    targetPort: 9080
  wildcardPolicy: None
